--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "start": "nodemon thingsWebserver.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.265.1",
+    "bufferutil": "^3.0.5",
     "canvas-gauges": "^2.1.5",
+    "chart.js": "^2.7.2",
+    "chartjs-plugin-zoom": "^0.6.3",
     "express": "^4.16.3",
+    "http": "0.0.0",
     "jquery": "^3.3.1",
-    "mqtt": "^2.18.0"
+    "moment-timezone": "^0.5.21",
+    "mqtt": "^2.18.0",
+    "socket.io": "^2.1.1",
+    "uws": "^10.148.1"
   },
   "devDependencies": {
     "browserify": "^16.2.2",
